java_library(
    name = "native-named-mutex",
    srcs = [
        "src/main/java/io/github/hcoona/concurrent/AbandonedMutexException.java",
        "src/main/java/io/github/hcoona/concurrent/Errno.java",
        "src/main/java/io/github/hcoona/concurrent/Fcntl.java",
        "src/main/java/io/github/hcoona/concurrent/Kernel32Ext.java",
        "src/main/java/io/github/hcoona/concurrent/LibCExt.java",
        "src/main/java/io/github/hcoona/concurrent/NamedMutex.java",
        "src/main/java/io/github/hcoona/concurrent/NamedMutexFileLockImpl.java",
        "src/main/java/io/github/hcoona/concurrent/NamedMutexPosixImpl.java",
        "src/main/java/io/github/hcoona/concurrent/NamedMutexWindowsImpl.java",
        "src/main/java/io/github/hcoona/concurrent/PosixErrorException.java",
        "src/main/java/io/github/hcoona/concurrent/Pthread.java",
        "src/main/java/io/github/hcoona/concurrent/Stat.java",
        "src/main/java/io/github/hcoona/utils/AbandonedMutexException.java",
        "src/main/java/io/github/hcoona/utils/Errno.java",
        "src/main/java/io/github/hcoona/utils/Fcntl.java",
        "src/main/java/io/github/hcoona/utils/Kernel32Ext.java",
        "src/main/java/io/github/hcoona/utils/LibCExt.java",
        "src/main/java/io/github/hcoona/utils/NamedMutex.java",
        "src/main/java/io/github/hcoona/utils/NamedMutexFileLockImpl.java",
        "src/main/java/io/github/hcoona/utils/NamedMutexPosixImpl.java",
        "src/main/java/io/github/hcoona/utils/NamedMutexWindowsImpl.java",
        "src/main/java/io/github/hcoona/utils/PosixErrorException.java",
        "src/main/java/io/github/hcoona/utils/Pthread.java",
        "src/main/java/io/github/hcoona/utils/Stat.java",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:net_java_dev_jna_jna",
        "@maven//:net_java_dev_jna_jna_platform",
    ],
)
