load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
)

genrule(
    name = "gen_cc_thrift_parquet",
    srcs = ["parquet.thrift"],
    outs = [
        "generated/parquet_constants.cpp",
        "generated/parquet_constants.h",
        "generated/parquet_types.cpp",
        "generated/parquet_types.h",
    ],
    cmd = "mkdir -p $$(dirname $(location generated/parquet_types.h)) && " +
          "$(location @org_apache_thrift//:thrift) " +
          "-out $$(dirname $(location generated/parquet_types.h)) " +
          "-I $$(dirname $(location parquet.thrift)) --gen cpp:no_skeleton " +
          "$(location parquet.thrift)",
    tools = ["@org_apache_thrift//:thrift"],
)

cc_library(
    name = "cc_thrift_parquet",
    srcs = [
        "windows_compatibility.h",
        ":gen_cc_thrift_parquet",
    ],
    copts = ONE_DEFAULT_COPTS,
    includes = ["."],
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        "//arrow",
        "@org_apache_thrift//:libthrift",
    ],
)

cc_library(
    name = "parquet",
    srcs = [
        "arrow/path_internal.cc",
        "arrow/reader.cc",
        "arrow/reader_internal.cc",
        "arrow/schema.cc",
        "arrow/schema_internal.cc",
        "arrow/writer.cc",
        "bloom_filter.cc",
        "column_reader.cc",
        "column_scanner.cc",
        "column_writer.cc",
        "deprecated_io.cc",
        "encoding.cc",
        "encryption.cc",
        "file_reader.cc",
        "file_writer.cc",
        "internal_file_decryptor.cc",
        "internal_file_encryptor.cc",
        "level_conversion.cc",
        "metadata.cc",
        "murmur3.cc",
        "platform.cc",
        "printer.cc",
        "properties.cc",
        "schema.cc",
        "statistics.cc",
        "stream_reader.cc",
        "stream_writer.cc",
        "types.cc",
    ] + [
        "encryption_internal.cc",
    ] + glob(["**/*.h"]),
    copts = ONE_DEFAULT_COPTS,
    defines = [
        "URI_STATIC_BUILD",
        "ARROW_USE_GLOG",
        "ARROW_HAVE_SSE4_2",
        "ARROW_WITH_LZ4",
        "ARROW_WITH_SNAPPY",
        "ARROW_WITH_ZLIB",
        "HAS_STRING_VIEW=0",
        "HAS_VOID_T=0",
        "HAS_DEDUCTION_GUIDES=0",
    ],
    linkopts = ONE_DEFAULT_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":cc_thrift_parquet",
        "//arrow",
        "@boringssl//:crypto",
    ],
)
