cc_binary(
    name = "redirect_launcher",
    srcs = ["main.c"],
    visibility = ["//visibility:public"],
    deps = [":launcher"],
)

cc_library(
    name = "launcher",
    srcs = select({
        "//bazel:linux": ["launcher.c"],
        "//conditions:default": ["launcher_null.c"],
    }),
    hdrs = ["launcher.h"],
    linkopts = select({
        "//bazel:linux": ["-lpthread"],
        "//conditions:default": [],
    }),
)
