load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
    "ONE_TEST_COPTS",
)

# TODO(zhangshuai.ustc): Fix compilation warnings.
cc_library(
    name = "zkclient",
    srcs = [
        "zkadapter.cc",
        "zkclient.cc",
    ],
    hdrs = [
        "zkadapter.h",
        "zkclient.h",
    ],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_microsoft_gsl//:gsl",
        "@com_google_absl//absl/strings",
        "@org_apache_zookeeper//:libzookeeper_mt",
    ],
)

cc_binary(
    name = "test_main",
    srcs = ["main.cc"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        ":zkclient",
        "@com_github_microsoft_gsl//:gsl",
    ],
)

cc_test(
    name = "zkadapter_test",
    size = "small",
    srcs = ["zkadapter_test.cc"],
    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        ":zkclient",
        "@com_google_googletest//:gtest_main",
    ],
)
