load("@rules_cc//cc:defs.bzl", "cc_test")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
)

cc_test(
    name = "row-wise-conversion-example",
    srcs = ["row-wise-conversion-example.cc"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        "//third_party/arrow",
    ],
)
