load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
    "ONE_TEST_COPTS",
)

cc_binary(
    name = "cpp_smoke_app",
    srcs = ["main.cc"],
    deps = [":library"],
)

cc_library(
    name = "library",
    srcs = ["library.cc"],
    hdrs = ["library.h"],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
)

cc_test(
    name = "library_test",
    srcs = ["library_test.cc"],
    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        ":library",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)
