load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "parse_pb_on_the_fly",
    srcs = ["main.cc"],
    deps = [
        "//gtl:macros",
        "//gtl:posix_file_system",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_protobuf//:protobuf",
    ],
)
