load("@rules_cc//cc:defs.bzl", "cc_binary")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
)

cc_binary(
    name = "parse_pb_on_the_fly",
    srcs = ["main.cc"],
    copts = ONE_DEFAULT_COPTS,
    data = ["messages.proto"],
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        "//gtl:macros",
        "//gtl:posix_file_system",
        "@bazel_tools//tools/cpp/runfiles",
        "//third_party/gflags",
        "//third_party/glog",
        "//third_party/absl/status",
        "//third_party/protobuf",
    ],
)
